--- a/Tree.WEB/Tree.Web.csproj
+++ b/Tree.WEB/Tree.Web.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tree.DAL\Tree.DAL.csproj" />
+    <ProjectReference Include="..\Tree.PostgresMigrator\Tree.PostgresMigrator.csproj" />
+  </ItemGroup>
+
 </Project>
