Добавление сервисов и одного обращения к репозиторию

--- a/Tree.Logic/Tree.Logic.csproj
+++ b/Tree.Logic/Tree.Logic.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tree.DAL\Tree.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
