--- a/Tree.DAL/Tree.DAL.csproj
+++ b/Tree.DAL/Tree.DAL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Npgsql" Version="7.0.2" />
   </ItemGroup>
 
