--- a/Tree.WEB/Tree.Web.csproj
+++ b/Tree.WEB/Tree.Web.csproj
@@ -9,10 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tree.Logic\Tree.Logic.csproj" />
     <ProjectReference Include="..\Tree.DAL\Tree.DAL.csproj" />
     <ProjectReference Include="..\Tree.PostgresMigrator\Tree.PostgresMigrator.csproj" />
   </ItemGroup>
