--- a/.gitignore
+++ b/.gitignore
@@ -361,5 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Tree.WEB/wwwroot/script/tree.js
-*.map
+/Tree.WEB/wwwroot/build
